syntax = "proto3";
option csharp_namespace = "MessageProtocol";

service MessageService {
  rpc Communicate(stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string id = 1;
  string type = 2;     // فقط در پیام معرفی پر میشه
  string sender = 3;   // فقط در پیام رندوم پر میشه
  string message = 4;
}

message MessageResponse {
  string id = 1;
  string engine = 2;
  int32 messageLength = 3;
  bool isValid = 4;
}
